--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
     Powered By nodePPT
     version: 1.4.1
-    site: https://github.com/ksky521/nodePPT
+    site: https://github.com/2013yulong/nodeppt
 -->
 <!doctype html>
 <html>
@@ -73,8 +73,8 @@
 <body>
     <h4>当前路径：/</h4>
     <ol>
-        <li><a class="star" href="demo.html" target="_blank">快速创建你的ppt 演示 - By 御龙</a> &nbsp; [<a href="demo.htm?_multiscreen=1" target="_blank" title="多窗口打开">多窗口</a>]</li>
+        <li><a class="star" href="demo.htm" target="_blank">快速创建你的ppt 演示 - By 御龙</a> &nbsp; [<a href="demo.htm?_multiscreen=1" target="_blank" title="多窗口打开">多窗口</a>]</li>
     </ol>
-    <h4 class="copyright">Powered by <a title="使用NodePPT" href="https://github.com/ksky521/nodePPT" target="_blank">NodePPT 1.4.1</a></h4>
+    <h4 class="copyright">Powered by <a title="使用NodePPT" href="https://github.com/2013yulong/nodeppt" target="_blank">NodePPT 1.4.1</a></h4>
 </body>
 </html>
