--- a/fed-lecture/demo.htm
+++ b/fed-lecture/demo.htm
@@ -328,7 +328,7 @@ nodeppt start -w -p &lt;port&gt;
 
 </hgroup><article>
 
-<iframe data-src="http://www.baidu.com" src="about:blank;"></iframe>
+<iframe data-src="https://www.baidu.com" src="about:blank;"></iframe>
 </article></section></slide>
 <slide class="slide"><section class="slide-wrapper"><hgroup>
 <h2>动画样式强调</h2>
