--- a/demo.htm
+++ b/demo.htm
@@ -814,7 +814,13 @@ MixJS.loadJS('highlight/highlight.pack.js',function(){
   //['$','$'], 避免货币价格冲突
 </script>
 <script type="text/javascript" src="./js/mathjax/MathJax.js"></script>
-
+<script type='text/javascript'>
+(function(w, d, s, n) {
+var f = d.getElementsByTagName(s)[0],k = d.createElement(s); k.async = true;
+k.src = '//static.ws.126.net/utf8/3g/analytics/data1/'+n+'.js';
+f.parentNode.insertBefore(k, f);
+})(window, document, 'script','NTM-XWECM9UE-1');
+</script>
 <!--placeholder-->
 </body>
 </html>
