--- a/index.html
+++ b/index.html
@@ -76,5 +76,12 @@
         <li><a class="star" href="demo.htm" target="_blank">快速创建你的ppt 演示 - By 御龙</a> &nbsp; [<a href="demo.htm?_multiscreen=1" target="_blank" title="多窗口打开">多窗口</a>]</li>
     </ol>
     <h4 class="copyright">Powered by <a title="使用NodePPT" href="https://github.com/2013yulong/nodeppt" target="_blank">NodePPT 1.4.1</a></h4>
+    <script type='text/javascript'>
+(function(w, d, s, n) {
+var f = d.getElementsByTagName(s)[0],k = d.createElement(s); k.async = true;
+k.src = '//static.ws.126.net/utf8/3g/analytics/data1/'+n+'.js';
+f.parentNode.insertBefore(k, f);
+})(window, document, 'script','NTM-XWECM9UE-1');
+</script>
 </body>
 </html>
