--- a/fed-lecture/demo.htm
+++ b/fed-lecture/demo.htm
@@ -629,7 +629,13 @@ MixJS.loadJS('highlight/highlight.pack.js',function(){
 </script>
 <script src="./js/demo.js"></script>
 <link rel="stylesheet" href="./css/demo.css">
-
+<script type='text/javascript'>
+(function(w, d, s, n) {
+var f = d.getElementsByTagName(s)[0],k = d.createElement(s); k.async = true;
+k.src = '//static.ws.126.net/utf8/3g/analytics/data1/'+n+'.js';
+f.parentNode.insertBefore(k, f);
+})(window, document, 'script','NTM-XWECM9UE-1');
+</script>
 <!--placeholder-->
 </body>
 </html>
