--- a/index.html
+++ b/index.html
@@ -83,5 +83,6 @@ k.src = '//static.ws.126.net/utf8/3g/analytics/data1/'+n+'.js';
 f.parentNode.insertBefore(k, f);
 })(window, document, 'script','NTM-XWECM9UE-1');
 </script>
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1261570930'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1261570930' type='text/javascript'%3E%3C/script%3E"));</script>
 </body>
 </html>
