--- a/fed-lecture/demo.htm
+++ b/fed-lecture/demo.htm
@@ -636,6 +636,16 @@ k.src = '//static.ws.126.net/utf8/3g/analytics/data1/'+n+'.js';
 f.parentNode.insertBefore(k, f);
 })(window, document, 'script','NTM-XWECM9UE-1');
 </script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?90a8a14c03d4bbdc506ff4cd67b30291";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 <!--placeholder-->
 </body>
 </html>
